--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Probando Git</h1>
+    <p style="color:blue;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium molestias voluptates porro consequatur odio sed debitis assumenda deleniti nostrum? Asperiores
+    
+    
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium molestias voluptates porro consequatur odio sed debitis assumenda deleniti nostrum? Asperiores dolorum ea est ab consequuntur eaque ad eveniet porro aperiam.</p>
 </body>
 </html>
