--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Probando Git</h1>
-    <p style="color:blue;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium molestias voluptates porro consequatur odio sed debitis assumenda deleniti nostrum? Asperiores
-    
+    <p style="color:blue;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium molestias voluptates porro consequatur odio sed debitis assumenda deleniti nostrum? Asperio </p>
     
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium molestias voluptates porro consequatur odio sed debitis assumenda deleniti nostrum? Asperiores dolorum ea est ab consequuntur eaque ad eveniet porro aperiam.</p>
 </body>
